Adjust byline styles to wrap author names and improve vertical rhythm https://bugs.webkit.org/show_bug.cgi?id=270524
Reviewed by Anne van Kesteren.

* Websites/webkit.org/wp-content/themes/webkit/style.css:
(article .byline):
(article .byline p):
(article .byline .date):
(article .byline .author): Deleted.

Canonical link: https://commits.webkit.org/275700@main

--- a/Websites/webkit.org/wp-content/themes/webkit/style.css
+++ b/Websites/webkit.org/wp-content/themes/webkit/style.css
@@ -1470,23 +1470,6 @@ article hr {
     margin-bottom: 3rem;
 }
 
-article .byline p {
-    font-size: 1.5rem;
-    line-height: 3rem;
-    margin-bottom: 0;
-    color: hsl(240, 2.3%, 56.7%);
-    color: var(--text-color-coolgray);
-}
-
-article .byline .date {
-    font-weight: 900;
-}
-
-article .byline .author {
-    white-space: nowrap;
-
-}
-
 article table {
     font-size: 1.6rem;
     border-collapse: collapse;
@@ -1659,6 +1642,18 @@ article .byline {
     text-align: right;
     padding-right: 4rem;
     box-sizing: border-box;
+    font-size: 1.5rem;
+    line-height: 1.75;
+}
+
+article .byline p {
+    margin-bottom: 0;
+    color: hsl(240, 2.3%, 56.7%);
+    color: var(--text-color-coolgray);
+}
+
+article .byline .date {
+    font-weight: 900;
 }
 
 article .bodycopy,
